# chat262

./: .gitignore  LICENSE  README.md  chat262_protocol.cc  chat262_protocol.h  client  client.cc  client.h  common.cc  common.h  database.cc  database.h  interface.cc  interface.h  logger.cc  logger.h  makefile  server  server.cc  server.h  user.h
chat262-grpc/: .gitignore  chat_pb2.py  chat_pb2.pyi  chat_pb2_grpc.py  client.py  db.pkl  server.py  unit_tests.py
chat262-grpc/protos/: chat.proto
chat262-improved/docs/: chat262_protocol.md  tests.md
chat262-improved/include/chat262_protocol/: chat262_protocol.h
chat262-improved/include/client/: client.h
chat262-improved/src/client/: CMakeLists.txt  client.cc  interface.cc
chat262-improved/src/server/: CMakeLists.txt  database.cc  server.cc
chat262-improved/tests/: CMakeLists.txt
chat262-improved/tests/test_correspondents/: CMakeLists.txt  test_correspondents.cc
chat262-improved/tests/test_delete/: test_delete.cc
chat262-improved/tests/test_registration/: test_registration.cc
chat262-replication/: .gitignore  README.md  chat_pb2.py  chat_pb2.pyi  chat_pb2_grpc.py  client.py  db0.pkl  db1.pkl  server.py  test_persistence.py  test_replication.py  unit_tests.py
chat262-replication/protos/: chat.proto
chat262-sockets/: .clang-format  .gitignore  CMakeLists.txt  README.md
chat262-sockets/docs/: chat262_protocol.md  client.md  instructions.md  server.md  tests.md
chat262-sockets/include/: chat.h  chat262_protocol.h  client.h  common.h  database.h  interface.h  server.h
chat262-sockets/include/chat262_protocol/: chat262_protocol.h  endianness.h
chat262-sockets/include/client/: client.h  interface.h
chat262-sockets/include/common/: common.h
chat262-sockets/include/server/: database.h  server.h
chat262-sockets/src/: chat262_protocol.cc  client.cc  interface.cc  server.cc
chat262-sockets/src/chat262_protocol/: CMakeLists.txt  chat262_protocol.cc
chat262-sockets/src/client/: CMakeLists.txt  client.cc  interface.cc  main.cc
chat262-sockets/src/server/: CMakeLists.txt  database.cc  main.cc  server.cc
chat262-sockets/tests/: CMakeLists.txt
chat262-sockets/tests/test_login/: CMakeLists.txt  test_login.cc
chat262-sockets/tests/test_logout/: CMakeLists.txt  test_logout.cc
chat262-sockets/tests/test_recv_txt/: test_recv_txt.cc
chat262-sockets/tests/test_registration/: CMakeLists.txt  test_registration.cc
chat262-sockets/tests/test_search_accounts/: CMakeLists.txt  test_search_accounts.cc
chat262-sockets/tests/test_send_txt/: CMakeLists.txt  test_send_txt.cc
chat262-sockets/tests/test_wrong_message/: CMakeLists.txt  test_wrong_message.cc
chat262-wire-protocol/: .clang-format  CMakeLists.txt  README.md
chat262-wire-protocol/docs/: client.md  instructions.md  protocol_implementation.md
chat262-wire-protocol/include/client/: interface.h
chat262-wire-protocol/include/server/: server.h
chat262-wire-protocol/src/: CMakeLists.txt
chat262-wire-protocol/src/chat262_protocol/: CMakeLists.txt
chat262-wire-protocol/tests/test_delete/: CMakeLists.txt
chat262-wire-protocol/tests/test_login/: CMakeLists.txt
chat262-wire-protocol/tests/test_logout/: CMakeLists.txt  test_logout.cc
chat262-wire-protocol/tests/test_recv_txt/: CMakeLists.txt
chat262-wire-protocol/tests/test_search_accounts/: test_search_accounts.cc
chat262-wire-protocol/tests/test_send_txt/: CMakeLists.txt  test_send_txt.cc
grpc/: .gitignore  README.md  chat_pb2.py  chat_pb2.pyi  chat_pb2_grpc.py  client.py  db.pkl  login.py  server.py
grpc/protos/: chat.proto
