enable_testing()

add_subdirectory(test_registration)
add_subdirectory(test_login)
add_subdirectory(test_logout)
add_subdirectory(test_search_accounts)
add_subdirectory(test_send_txt)
add_subdirectory(test_recv_txt)
add_subdirectory(test_correspondents)
add_subdirectory(test_delete)
add_subdirectory(test_wrong_message)
