add_library(
    server
    server.cc
    database.cc
    logger.cc
)
target_compile_options(
    server
    PRIVATE
    -Wall -Wextra -Werror -Wshadow -O2 -std=c++17
)
target_include_directories(
    server
    PUBLIC
    ${CMAKE_SOURCE_DIR}/include/server/
    ${CMAKE_SOURCE_DIR}/include/chat262_protocol/
    ${CMAKE_SOURCE_DIR}/include/common/
)

add_executable(
    server.out
    main.cc
)
target_link_libraries(
    server.out
    PUBLIC
    server
    chat262_protocol
)
target_link_options(
    server.out
    PUBLIC
    -pthread
)
set_target_properties(
    server.out
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}
)